--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,19 @@
 html,body {
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
-#js-map {
-    width: 100%;
+.grid-container {
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+.full-height {
     height: 100%;
-  }
+}
+.map {
+    width: 100%;
+    height: 100%;    
+}
+.column-1 {
+    padding-left: 15px;
+}
